# ford-infotainment

./: Cargo.toml  INFOTAINMENT_BUILD.md  README.md
docs/: ford_rust_software_engineer.md
docs/architecture/: README.md  connected_vehicle_architecture.md  remote_command_flow.md  salus_to_ford_mapping.md
docs/coding/: DEMO_WALKTHROUGH.md  DESIGN.md  IMPLEMENTATION.md  MQTT_RUNBOOK.md  README.md
docs/methodologies/: README.md
docs/walkthrough/: README.md
examples/: mqtt_demo.rs
src/: command.rs  command_transport.rs  error.rs  event.rs  lib.rs  main.rs  mqtt_topics.rs  policy.rs  service_bus.rs  telemetry.rs  transport.rs
src/mqtt/: adapter.rs  client.rs  command_flow.rs  command_handler.rs  handler.rs  mod.rs  publisher.rs  runtime.rs  subscriber.rs  transport.rs
tests/: command_tests.rs  command_transport_tests.rs  events_test.rs  mqtt.rs  mqtt_adapter_tests.rs  mqtt_topics_tests.rs  policy_tests.rs  serialization_tests.rs  service_bus_tests.rs  telemetry_tests.rs  transport_tests.rs
tests/mqtt/: broker_smoke_tests.rs  client_tests.rs  command_flow_tests.rs  command_handler_tests.rs  publisher_tests.rs  runtime_tests.rs  subscriber_tests.rs  topics_tests.rs  transport_tests.rs
