[package]
name = "ford-infotainment"
version = "0.1.0"
authors = ["johnwhitton <john@johnwhitton.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt"] }